force-app/main/default/objects/Metas__c/Metas__c.object-meta.xml
<CustomObject>
    <label>Meta</label>
    <nameField>
        <displayFormat>MT - {0000000000}</displayFormat>
        <label>Nº</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Metas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>