force-app/main/default/objects/Metas__c/fields/Abr23__c.field-meta.xml
<CustomField>
    <fullName>Abr23__c</fullName>
    <label>Abr 23</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>