force-app/main/default/objects/Metas__c/fields/Ago23__c.field-meta.xml
<CustomField>
    <fullName>Ago23__c</fullName>
    <label>Ago 23</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>