force-app/main/default/objects/Metas__c/fields/ApelidoRepresentante__c.field-meta.xml
<CustomField>
    <fullName>ApelidoRepresentante__c</fullName>
    <formula>Representante__r.Apelido__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Apelido do representante</label>
    <type>Text</type>
</CustomField>