force-app/main/default/objects/Metas__c/fields/CodigoItem__c.field-meta.xml
<CustomField>
    <fullName>CodigoItem__c</fullName>
    <label>Código do item</label>
    <length>10</length>
    <type>Text</type>
</CustomField>