force-app/main/default/objects/Metas__c/fields/CodigoRepresentante__c.field-meta.xml
<CustomField>
    <fullName>CodigoRepresentante__c</fullName>
    <formula>Representante__r.CodigoContato__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código do representante</label>
    <type>Text</type>
</CustomField>