force-app/main/default/objects/Metas__c/fields/Dez23__c.field-meta.xml
<CustomField>
    <fullName>Dez23__c</fullName>
    <label>Dez 23</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>