force-app/main/default/objects/Metas__c/fields/EmailGerente__c.field-meta.xml
<CustomField>
    <fullName>EmailGerente__c</fullName>
    <formula>HierarquiaGerente__r.Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email do gerente</label>
    <type>Text</type>
</CustomField>