force-app/main/default/objects/Metas__c/fields/EmailRepresentante__c.field-meta.xml
<CustomField>
    <fullName>EmailRepresentante__c</fullName>
    <formula>Representante__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email do representante</label>
    <type>Text</type>
</CustomField>