force-app/main/default/objects/Metas__c/fields/EmailSupervisor__c.field-meta.xml
<CustomField>
    <fullName>EmailSupervisor__c</fullName>
    <formula>HierarquiaSupervisor__r.Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email do supervisor</label>
    <type>Text</type>
</CustomField>