force-app/main/default/objects/Metas__c/fields/Fev23__c.field-meta.xml
<CustomField>
    <fullName>Fev23__c</fullName>
    <label>Fev 23</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>