force-app/main/default/objects/Metas__c/fields/GrupoItem__c.field-meta.xml
<CustomField>
    <fullName>GrupoItem__c</fullName>
    <formula>TEXT(Produto__r.Family)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grupo do item</label>
    <type>Text</type>
</CustomField>