force-app/main/default/objects/Metas__c/fields/HerarquiaNivel5Representante__c.field-meta.xml
<CustomField>
    <fullName>HerarquiaNivel5Representante__c</fullName>
    <formula>Representante__r.FirstName &amp; &quot; &quot; &amp;  Representante__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hierarquia Nível 5 - Representante</label>
    <type>Text</type>
</CustomField>