force-app/main/default/objects/Metas__c/fields/HierarquiaDiretor__c.field-meta.xml
<CustomField>
    <fullName>HierarquiaDiretor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hierarquia Diretor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Hierarquia__c.Nivel__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Hierarquia__c</referenceTo>
    <relationshipLabel>Metas (Hierarquia Diretor)</relationshipLabel>
    <relationshipName>Metas2</relationshipName>
    <type>Lookup</type>
</CustomField>