force-app/main/default/objects/Metas__c/fields/HierarquiaGerente__c.field-meta.xml
<CustomField>
    <fullName>HierarquiaGerente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hierarquia Gerente</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Hierarquia__c.Nivel__c</field>
            <operation>equals</operation>
            <value>2</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Hierarquia__c</referenceTo>
    <relationshipLabel>Metas (Hierarquia Gerente)</relationshipLabel>
    <relationshipName>Metas1</relationshipName>
    <type>Lookup</type>
</CustomField>