force-app/main/default/objects/Metas__c/fields/HierarquiaNivel2Gerente__c.field-meta.xml
<CustomField>
    <fullName>HierarquiaNivel2Gerente__c</fullName>
    <formula>HierarquiaGerente__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hierarquia Nível 2 - Gerente</label>
    <type>Text</type>
</CustomField>