force-app/main/default/objects/Metas__c/fields/HierarquiaNivel3Supervisor__c.field-meta.xml
<CustomField>
    <fullName>HierarquiaNivel3Supervisor__c</fullName>
    <formula>HierarquiaSupervisor__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hierarquia Nível 3 - Supervisor</label>
    <type>Text</type>
</CustomField>