force-app/main/default/objects/Metas__c/fields/HierarquiaSupervisor__c.field-meta.xml
<CustomField>
    <fullName>HierarquiaSupervisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hierarquia Supervisor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Hierarquia__c.Nivel__c</field>
            <operation>equals</operation>
            <value>3</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Hierarquia__c</referenceTo>
    <relationshipLabel>Metas (Hierarquia Supervisor)</relationshipLabel>
    <relationshipName>Metas</relationshipName>
    <type>Lookup</type>
</CustomField>