force-app/main/default/objects/Metas__c/fields/Jan23__c.field-meta.xml
<CustomField>
    <fullName>Jan23__c</fullName>
    <label>Jan 23</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>