force-app/main/default/objects/Metas__c/fields/Jul23__c.field-meta.xml
<CustomField>
    <fullName>Jul23__c</fullName>
    <label>Jul 23</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>