force-app/main/default/objects/Metas__c/fields/Jun23__c.field-meta.xml
<CustomField>
    <fullName>Jun23__c</fullName>
    <label>Jun 23</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>