force-app/main/default/objects/Metas__c/fields/Mai23__c.field-meta.xml
<CustomField>
    <fullName>Mai23__c</fullName>
    <label>Mai 23</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>