force-app/main/default/objects/Metas__c/fields/Mar23__c.field-meta.xml
<CustomField>
    <fullName>Mar23__c</fullName>
    <label>Mar 23</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>