force-app/main/default/objects/Metas__c/fields/Nov23__c.field-meta.xml
<CustomField>
    <fullName>Nov23__c</fullName>
    <label>Nov 23</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>