force-app/main/default/objects/Metas__c/fields/Out23__c.field-meta.xml
<CustomField>
    <fullName>Out23__c</fullName>
    <label>Out 23</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>