force-app/main/default/objects/Metas__c/fields/Representante__c.field-meta.xml
<CustomField>
    <fullName>Representante__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Representante</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Representante__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Metas</relationshipLabel>
    <relationshipName>Metas</relationshipName>
    <type>Lookup</type>
</CustomField>