force-app/main/default/objects/Metas__c/fields/Set23__c.field-meta.xml
<CustomField>
    <fullName>Set23__c</fullName>
    <label>Set 23</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>