force-app/main/default/objects/Metas__c/fields/Total23__c.field-meta.xml
<CustomField>
    <fullName>Total23__c</fullName>
    <formula>Jan23__c + Fev23__c + Mar23__c + Abr23__c + Mai23__c + Jun23__c + Jul23__c + Ago23__c + Set23__c + Out23__c + Dez23__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total 23</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>