force-app/main/default/objects/Metas__c/fields/TotalQ123__c.field-meta.xml
<CustomField>
    <fullName>TotalQ123__c</fullName>
    <formula>Jan23__c +  Fev23__c + Mar23__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Q1 23</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>