force-app/main/default/objects/Metas__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>HerarquiaNivel5Representante__c</columns>
    <columns>HierarquiaNivel3Supervisor__c</columns>
    <columns>HierarquiaNivel2Gerente__c</columns>
    <columns>HierarquiaDiretor__c</columns>
    <columns>Tipo__c</columns>
    <columns>Total23__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>